--- a/run.config
+++ b/run.config
@@ -1,9 +1,14 @@
-SPADES="rnaspades.py -s $single_reads -t $CPU -m $MEM -o $OUTDIR"
-TRINITY="Trinity --seqType fq --max_memory 120G --single $single_reads --no_normalize_reads --CPU $CPU --output $OUTDIR --full_cleanup"
-BAYESDENOVO="BayesDenovo_v1.pl --seqType fq --single $single_reads --CPU $CPU  --output $OUTDIR --bamfile $OUTDIR/bamfile.bam --fafile $OUTDIR/bayesdenovo.fa"
-RNABLOOM="rnabloom -sef $single_reads -t $CPU  -outdir $OUTDIR"
-IDBA="idba_hybrid -r $single_reads -o $OUTDIR"
-
+# Absolute path to the run_{assembler}.sh file
+# NAMETOOL=run_assemblers_dir/run_{assembler}.sh
+SPADES=run_assemblers_dir/Run_spades.sh
+TRINITY=run_assemblers_dir/Run_trinity.sh
+RNABLOOM=run_assemblers_dir/Run_rnabloom.sh
+IDBA=run_assemblers_dir/Run_idba.sh
+TRANSABBYS=run_assemblers_dir/Run_transabyss.sh
+CAP3=run_assemblers_dir/Run_cap3.sh
+VELVET=run_assemblers_dir/Run_velvet.sh
+OASES=run_assemblers_dir/Run_oases.sh
+PLASS=run_assemblers_dir/Run_plass.sh
 # Not running yet
-TRANSABBYS="transabyss --se $single_reads --threads $CPU  --outdir $OUTDIR"
-SOAPDENOVO="SOAPdenovo-Trans-31mer all -s $configureFile -p $CPU  -o $OUTDIR"
+#SOAPDENOVO=run_assemblers_dir/Run_soapDenovo.sh
+#BAYESDENOVO=run_assemblers_dir/Run_bayesDenovo.sh
