--- a/run.config
+++ b/run.config
@@ -1,14 +1,13 @@
-# Absolute path to the run_{assembler}.sh file
-# NAMETOOL=run_assemblers_dir/run_{assembler}.sh
+# Absolute path to the run_{assembler}.sh file, NAMETOOL=run_assemblers_dir/run_{assembler}.sh
 SPADES=run_assemblers_dir/Run_spades.sh
 TRINITY=run_assemblers_dir/Run_trinity.sh
 RNABLOOM=run_assemblers_dir/Run_rnabloom.sh
 IDBA=run_assemblers_dir/Run_idba.sh
-TRANSABBYS=run_assemblers_dir/Run_transabyss.sh
-CAP3=run_assemblers_dir/Run_cap3.sh
 VELVET=run_assemblers_dir/Run_velvet.sh
-OASES=run_assemblers_dir/Run_oases.sh
 PLASS=run_assemblers_dir/Run_plass.sh
+TRANSABBYS=run_assemblers_dir/Run_transabyss.sh
+#CAP3=run_assemblers_dir/Run_cap3.sh
 # Not running yet
+#OASES=run_assemblers_dir/Run_oases.sh
 #SOAPDENOVO=run_assemblers_dir/Run_soapDenovo.sh
 #BAYESDENOVO=run_assemblers_dir/Run_bayesDenovo.sh
