--- a/run.config
+++ b/run.config
@@ -11,3 +11,9 @@ TRANSABBYS=run_assemblers_dir/Run_transabyss.sh
 #OASES=run_assemblers_dir/Run_oases.sh
 #SOAPDENOVO=run_assemblers_dir/Run_soapDenovo.sh
 #BAYESDENOVO=run_assemblers_dir/Run_bayesDenovo.sh
+# To install
+#MIRA
+#SOAPDENOVO2
+#BinPacker
+#Bridger
+#Newbler
