--- a/run.config
+++ b/run.config
@@ -9,12 +9,11 @@
 BINPACKER=run_assemblers_dir/Run_binpacker.sh
 BRIDGER=run_assemblers_dir/Run_bridger.sh
 MEGAHIT=run_assemblers_dir/Run_megahit.sh
+CSTONE=run_assemblers_dir/Run_cstone.sh
 # Not running yet
 #CAP3=run_assemblers_dir/Run_cap3.sh
 #OASES=run_assemblers_dir/Run_oases.sh
 #SOAPDENOVO=run_assemblers_dir/Run_soapDenovo.sh
 #BAYESDENOVO=run_assemblers_dir/Run_bayesDenovo.sh
 # To install
-#MIRA
-#SOAPDENOVO2
-#Newbler
+#MIRA=run_assemblers_dir/Run_mira.sh
