--- a/run.config
+++ b/run.config
@@ -7,9 +7,9 @@
 #PLASS=run_assemblers_dir/Run_plass.sh
 #TRANSABBYS=run_assemblers_dir/Run_transabyss.sh
 BINPACKER=run_assemblers_dir/Run_binpacker.sh
-BRIDGER=run_assemblers_dir/Run_bridger.sh
-MEGAHIT=run_assemblers_dir/Run_megahit.sh
-CSTONE=run_assemblers_dir/Run_cstone.sh
+#BRIDGER=run_assemblers_dir/Run_bridger.sh
+#MEGAHIT=run_assemblers_dir/Run_megahit.sh
+#CSTONE=run_assemblers_dir/Run_cstone.sh
 # Not running yet
 #CAP3=run_assemblers_dir/Run_cap3.sh
 #OASES=run_assemblers_dir/Run_oases.sh
