--- a/run.config
+++ b/run.config
@@ -1,15 +1,15 @@
 # Absolute path to the run_{assembler}.sh file, NAMETOOL=run_assemblers_dir/run_{assembler}.sh
-#SPADES=run_assemblers_dir/Run_spades.sh
-#TRINITY=run_assemblers_dir/Run_trinity.sh
-#RNABLOOM=run_assemblers_dir/Run_rnabloom.sh
-#IDBA=run_assemblers_dir/Run_idba.sh
-#VELVET=run_assemblers_dir/Run_velvet.sh
-#PLASS=run_assemblers_dir/Run_plass.sh
-#TRANSABBYS=run_assemblers_dir/Run_transabyss.sh
+SPADES=run_assemblers_dir/Run_spades.sh
+TRINITY=run_assemblers_dir/Run_trinity.sh
+RNABLOOM=run_assemblers_dir/Run_rnabloom.sh
+IDBA=run_assemblers_dir/Run_idba.sh
+VELVET=run_assemblers_dir/Run_velvet.sh
+PLASS=run_assemblers_dir/Run_plass.sh
+TRANSABBYS=run_assemblers_dir/Run_transabyss.sh
 BINPACKER=run_assemblers_dir/Run_binpacker.sh
-#BRIDGER=run_assemblers_dir/Run_bridger.sh
-#MEGAHIT=run_assemblers_dir/Run_megahit.sh
-#CSTONE=run_assemblers_dir/Run_cstone.sh
+BRIDGER=run_assemblers_dir/Run_bridger.sh
+MEGAHIT=run_assemblers_dir/Run_megahit.sh
+CSTONE=run_assemblers_dir/Run_cstone.sh
 # Not running yet
 #CAP3=run_assemblers_dir/Run_cap3.sh
 #OASES=run_assemblers_dir/Run_oases.sh
