--- a/run.config
+++ b/run.config
@@ -3,7 +3,7 @@ SPADES=run_assemblers_dir/Run_spades.sh
 TRINITY=run_assemblers_dir/Run_trinity.sh
 RNABLOOM=run_assemblers_dir/Run_rnabloom.sh
 IDBA=run_assemblers_dir/Run_idba.sh
-VELVET=run_assemblers_dir/Run_velvet.sh
+#VELVET=run_assemblers_dir/Run_velvet.sh #<- omit, cause poor results
 PLASS=run_assemblers_dir/Run_plass.sh
 TRANSABBYS=run_assemblers_dir/Run_transabyss.sh
 BINPACKER=run_assemblers_dir/Run_binpacker.sh
