--- a/run.config
+++ b/run.config
@@ -10,6 +10,7 @@ BINPACKER=run_assemblers_dir/Run_binpacker.sh
 BRIDGER=run_assemblers_dir/Run_bridger.sh
 MEGAHIT=run_assemblers_dir/Run_megahit.sh
 CSTONE=run_assemblers_dir/Run_cstone.sh
+TRANSLIG=run_assemblers_dir/Run_transLiG.sh # <- to Run!!
 # Not running yet
 #CAP3=run_assemblers_dir/Run_cap3.sh
 #OASES=run_assemblers_dir/Run_oases.sh
