--- a/run.config
+++ b/run.config
@@ -1,20 +1,24 @@
 # Absolute path to the run_{assembler}.sh file, NAMETOOL=run_assemblers_dir/run_{assembler}.sh
-SPADES=run_assemblers_dir/Run_spades.sh
-TRINITY=run_assemblers_dir/Run_trinity.sh
-RNABLOOM=run_assemblers_dir/Run_rnabloom.sh
-IDBA=run_assemblers_dir/Run_idba.sh
-#VELVET=run_assemblers_dir/Run_velvet.sh #<- omit, cause poor results
-PLASS=run_assemblers_dir/Run_plass.sh
-TRANSABBYS=run_assemblers_dir/Run_transabyss.sh
-BINPACKER=run_assemblers_dir/Run_binpacker.sh
-BRIDGER=run_assemblers_dir/Run_bridger.sh
-MEGAHIT=run_assemblers_dir/Run_megahit.sh
-CSTONE=run_assemblers_dir/Run_cstone.sh
-TRANSLIG=run_assemblers_dir/Run_transLiG.sh # <- to Run!!
+#SPADES=run_assemblers_dir/Run_spades.sh
+#TRINITY=run_assemblers_dir/Run_trinity.sh
+#RNABLOOM=run_assemblers_dir/Run_rnabloom.sh
+#IDBA=run_assemblers_dir/Run_idba.sh
+#PLASS=run_assemblers_dir/Run_plass.sh
+#TRANSABBYS=run_assemblers_dir/Run_transabyss.sh
+#BINPACKER=run_assemblers_dir/Run_binpacker.sh
+#BRIDGER=run_assemblers_dir/Run_bridger.sh
+#MEGAHIT=run_assemblers_dir/Run_megahit.sh
+#CSTONE=run_assemblers_dir/Run_cstone.sh
+#TRANSLIG=run_assemblers_dir/Run_transLiG.sh
+#SOAPDENOVO=run_assemblers_dir/Run_soapDenovo.sh
+#OASES=run_assemblers_dir/Run_oases.sh
+#STRINGTIE=run_assemblers_dir/Run_stringtie.sh
+MERGEPIPE=run_assemblers_dir/Run_mergepipe.sh
+# To install
+# omit, cause poor results
+#VELVET=run_assemblers_dir/Run_velvet.sh
 # Not running yet
 #CAP3=run_assemblers_dir/Run_cap3.sh
-#OASES=run_assemblers_dir/Run_oases.sh
-#SOAPDENOVO=run_assemblers_dir/Run_soapDenovo.sh
 #BAYESDENOVO=run_assemblers_dir/Run_bayesDenovo.sh
 # To install
 #MIRA=run_assemblers_dir/Run_mira.sh
